--- a/example/index.html
+++ b/example/index.html
@@ -16,10 +16,20 @@
     <script type="text/javascript" src="./arcus.js"></script>
     <script type="text/javascript">
       const data = {
-        frames: ['Sprint 1', 'Sprint 2', 'Sprint 3', 'Sprint 4'],
+        edges: [
+          {
+            key: 'FSB-101',
+            from: 'Sprint 1.To Do',
+            to: 'Sprint 1.In Progress',
+            inf: {
+              title: 'Some title'
+            }
+          }
+        ],
+        frames: [ { name: 'Sprint 1' }, { name: 'Sprint 2' }, { name: 'Sprint 3' }, { name: 'Sprint 4' }],
         nodes: [
           { name: 'To Do', config: { color: '#9e9e9e' }},
-          { name: 'In Progess', config: { color: '#3f51b5' }},
+          { name: 'In Progress', config: { color: '#3f51b5' }},
           { name: 'In Review', config: { color: '#ffc107' }},
           { name: 'Done', config: { color: '#009688' }}
         ]
