Add simple forward connenctions

--- a/example/index.html
+++ b/example/index.html
@@ -9,6 +9,12 @@
       .arcus-frame-line {
         stroke: #dcdcdc;
       }
+
+      .arcus-edge {
+        fill: none;
+        stroke: #414141;
+        opacity: 0.2
+      }
     </style>
   </head>
   <body>
@@ -21,6 +27,38 @@
             key: 'FSB-101',
             from: 'Sprint 1.To Do',
             to: 'Sprint 1.In Progress',
+            inf: {
+              title: 'Some title'
+            }
+          },
+          {
+            key: 'FSB-101',
+            from: 'Sprint 1.In Progress',
+            to: 'Sprint 1.In Review',
+            inf: {
+              title: 'Some title'
+            }
+          },
+          {
+            key: 'FSB-102',
+            from: 'Sprint 1.To Do',
+            to: 'Sprint 1.Done',
+            inf: {
+              title: 'Some title'
+            }
+          },
+          {
+            key: 'FSB-103',
+            from: 'Sprint 1.To Do',
+            to: 'Sprint 2.To Do',
+            inf: {
+              title: 'Some title'
+            }
+          },
+          {
+            key: 'FSB-103',
+            from: 'Sprint 2.To Do',
+            to: 'Sprint 2.Done',
             inf: {
               title: 'Some title'
             }
