Draw band for grouped issue

--- a/example/index.html
+++ b/example/index.html
@@ -11,9 +11,10 @@
       }
 
       .arcus-edge {
-        fill: none;
-        stroke: #414141;
-        opacity: 0.2
+        fill: #0366d6;
+        stroke: #0366d6;
+        opacity: 0.2;
+        stroke-width: 2;
       }
     </style>
   </head>
@@ -48,6 +49,22 @@
             }
           },
           {
+            key: 'FSB-102',
+            from: 'Sprint 1.To Do',
+            to: 'Sprint 1.Done',
+            inf: {
+              title: 'Some title'
+            }
+          },
+          {
+            key: 'FSB-103',
+            from: 'Sprint 1.To Do',
+            to: 'Sprint 1.Done',
+            inf: {
+              title: 'Some title'
+            }
+          },
+          {
             key: 'FSB-103',
             from: 'Sprint 1.To Do',
             to: 'Sprint 2.To Do',
@@ -57,6 +74,38 @@
           },
           {
             key: 'FSB-103',
+            from: 'Sprint 1.To Do',
+            to: 'Sprint 2.To Do',
+            inf: {
+              title: 'Some title'
+            }
+          },
+          {
+            key: 'FSB-105',
+            from: 'Sprint 1.To Do',
+            to: 'Sprint 2.To Do',
+            inf: {
+              title: 'Some title'
+            }
+          },
+          {
+            key: 'FSB-106',
+            from: 'Sprint 1.To Do',
+            to: 'Sprint 2.To Do',
+            inf: {
+              title: 'Some title'
+            }
+          },
+          {
+            key: 'FSB-103',
+            from: 'Sprint 2.To Do',
+            to: 'Sprint 2.Done',
+            inf: {
+              title: 'Some title'
+            }
+          },
+          {
+            key: 'FSB-107',
             from: 'Sprint 2.To Do',
             to: 'Sprint 2.Done',
             inf: {
