Revert to isolated issue view

--- a/example/index.html
+++ b/example/index.html
@@ -11,8 +11,7 @@
       }
 
       .arcus-edge {
-        fill: #0366d6;
-        stroke: #0366d6;
+        fill: none;
         opacity: 0.2;
         stroke-width: 2;
       }
@@ -60,6 +59,30 @@
             key: 'FSB-103',
             from: 'Sprint 1.To Do',
             to: 'Sprint 1.Done',
+            inf: {
+              title: 'Some title'
+            }
+          },
+          {
+            key: 'FSB-103',
+            from: 'Sprint 1.To Do',
+            to: 'Sprint 2.To Do',
+            inf: {
+              title: 'Some title'
+            }
+          },
+          {
+            key: 'FSB-103',
+            from: 'Sprint 1.To Do',
+            to: 'Sprint 2.To Do',
+            inf: {
+              title: 'Some title'
+            }
+          },
+          {
+            key: 'FSB-103',
+            from: 'Sprint 1.To Do',
+            to: 'Sprint 2.To Do',
             inf: {
               title: 'Some title'
             }
