--- a/example/index.html
+++ b/example/index.html
@@ -10,6 +10,13 @@
         stroke: #dcdcdc;
       }
 
+      .arcus-edge-shadow {
+        fill: #000;
+        opacity: 0;
+        stroke-width: 2px;
+        stroke: #000;
+      }
+
       .arcus-edge {
         fill: none;
         opacity: 0.2;
