--- a/example/index.html
+++ b/example/index.html
@@ -15,13 +15,18 @@
         opacity: 0;
         stroke-width: 2px;
         stroke: #000;
-        cursor: pointer;
       }
 
       .arcus-edge {
         fill: none;
         opacity: 0.2;
         stroke-width: 2;
+      }
+
+      .arcus-edge-sel-mark {
+        fill: none;
+        stroke-width: 2;
+        stroke: #414141;
       }
     </style>
   </head>
