Add opposite routes

--- a/example/index.html
+++ b/example/index.html
@@ -147,6 +147,14 @@
             inf: {
               title: 'Some title'
             }
+          },
+          {
+            key: 'FSB-107',
+            from: 'Sprint 2.Done',
+            to: 'Sprint 2.In Progress',
+            inf: {
+              title: 'Some title'
+            }
           }
         ],
         frames: [ { name: 'Sprint 1' }, { name: 'Sprint 2' }, { name: 'Sprint 3' }, { name: 'Sprint 4' }],
