Correct spacing around the viz

--- a/example/index.html
+++ b/example/index.html
@@ -28,6 +28,10 @@
         stroke-width: 2;
         stroke: #414141;
       }
+
+      svg {
+        background: antiquewhite;
+      }
     </style>
   </head>
   <body>
