Draw frame desc. It looks beautiful

--- a/example/index.html
+++ b/example/index.html
@@ -34,7 +34,14 @@
         stroke: none;
         font-size: 16px;
         font-family: 'Roboto', sans-serif;
+      }
+
+      .arcus-frame-label-head {
         font-weight: 700;
+      }
+
+      .arcus-frame-label-desc {
+        font-weight: 400;
       }
     </style>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
