--- a/example/index.html
+++ b/example/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Test space</title>
     <style>
+      body,
+      html {
+        padding: 0;
+        margin: 0;
+      }
       .arcus-frame-line {
         stroke: #dcdcdc;
       }
@@ -43,10 +48,32 @@
       .arcus-frame-label-desc {
         font-weight: 300;
       }
+
+      #con-inf-mount {
+        position: fixed;
+        background: lightblue;
+      }
+
+      .banner {
+        width: 100%;
+        height: 100px;
+        margin: 0px;
+      }
+
+      .space {
+        margin-bottom: 50px;
+      }
+
+      #root {
+        margin: 80px 50px;
+      }
+
     </style>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,700" rel="stylesheet">
   </head>
   <body>
+    <div id='con-inf-mount' class="banner"></div>
+    <div class="banner space"></div>
     <div id='root'></div>
     <script type="text/javascript" src="./arcus.js"></script>
     <script type="text/javascript">
@@ -191,7 +218,10 @@
       new Arcus()
         .mount('#root', [600, 1200])
         .data(data)
-        .render();
+        .render()
+        .contextInf('#con-inf-mount', (data, mount) => {
+          mount.html(data);
+        })
         
     </script>
   </body>
