Add fusioncharts for sparkcharts

--- a/example/index.html
+++ b/example/index.html
@@ -80,6 +80,9 @@
     <div id='con-inf-mount' class="banner"></div>
     <div class="banner space"></div>
     <div id='root'></div>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/fusioncharts@3.13.1/fusioncharts.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/fusioncharts@3.13.1/fusioncharts.widgets.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/fusioncharts@3.13.1/themes/fusioncharts.theme.fusion.js"></script>
     <script type="text/javascript" src="./arcus.js"></script>
     <script type="text/javascript">
       const data = {
