--- a/example/index.html
+++ b/example/index.html
@@ -83,140 +83,92 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/fusioncharts@3.13.1/fusioncharts.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/fusioncharts@3.13.1/fusioncharts.widgets.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/fusioncharts@3.13.1/themes/fusioncharts.theme.fusion.js"></script>
+    <script type="text/javascript" src="./private_data.js"></script>
+    <!-- <script type="text/javascript" src="./data_slice.js"></script> -->
     <script type="text/javascript" src="./arcus.js"></script>
     <script type="text/javascript">
-      const data = {
-        edges: [
-          {
-            key: 'FSB-101',
-            from: 'Sprint 1.To Do',
-            to: 'Sprint 1.In Progress',
-            inf: {
-              title: 'Some title'
-            }
-          },
-          {
-            key: 'FSB-101',
-            from: 'Sprint 1.In Progress',
-            to: 'Sprint 1.In Review',
-            inf: {
-              title: 'Some title'
-            }
-          },
-          {
-            key: 'FSB-102',
-            from: 'Sprint 1.To Do',
-            to: 'Sprint 1.Done',
-            inf: {
-              title: 'Some title'
-            }
-          },
-          {
-            key: 'FSB-102',
-            from: 'Sprint 1.To Do',
-            to: 'Sprint 1.Done',
-            inf: {
-              title: 'Some title'
-            }
-          },
-          {
-            key: 'FSB-103',
-            from: 'Sprint 1.To Do',
-            to: 'Sprint 1.Done',
-            inf: {
-              title: 'Some title'
-            }
-          },
-          {
-            key: 'FSB-103',
-            from: 'Sprint 1.To Do',
-            to: 'Sprint 2.To Do',
-            inf: {
-              title: 'Some title'
-            }
-          },
-          {
-            key: 'FSB-103',
-            from: 'Sprint 1.To Do',
-            to: 'Sprint 2.To Do',
-            inf: {
-              title: 'Some title'
-            }
-          },
-          {
-            key: 'FSB-103',
-            from: 'Sprint 1.To Do',
-            to: 'Sprint 2.To Do',
-            inf: {
-              title: 'Some title'
-            }
-          },
-          {
-            key: 'FSB-103',
-            from: 'Sprint 1.To Do',
-            to: 'Sprint 2.To Do',
-            inf: {
-              title: 'Some title'
-            }
-          },
-          {
-            key: 'FSB-103',
-            from: 'Sprint 1.To Do',
-            to: 'Sprint 2.To Do',
-            inf: {
-              title: 'Some title'
-            }
-          },
-          {
-            key: 'FSB-105',
-            from: 'Sprint 1.To Do',
-            to: 'Sprint 2.To Do',
-            inf: {
-              title: 'Some title'
-            }
-          },
-          {
-            key: 'FSB-106',
-            from: 'Sprint 1.To Do',
-            to: 'Sprint 2.To Do',
-            inf: {
-              title: 'Some title'
-            }
-          },
-          {
-            key: 'FSB-103',
-            from: 'Sprint 2.To Do',
-            to: 'Sprint 2.Done',
-            inf: {
-              title: 'Some title'
-            }
-          },
-          {
-            key: 'FSB-107',
-            from: 'Sprint 2.To Do',
-            to: 'Sprint 2.Done',
-            inf: {
-              title: 'Some title'
-            }
-          },
-          {
-            key: 'FSB-107',
-            from: 'Sprint 2.Done',
-            to: 'Sprint 2.In Progress',
-            inf: {
-              title: 'Some title'
+      let resp;
+      let rData = [];
+      let hash = {};
+      for (let i = 0; i < data.length; i++) {
+        let issues = data[i].issues;
+        for (let j = 0; j < issues.length; j++) {
+          let key = issues[j].key;
+          if (key in hash) {
+            continue;
+          } else {
+            hash[key] = 1;
+          }
+          resp = { key: key };
+          if (issues[j].fields.issuetype.subtask) {
+            continue;
+          }
+          let histories = issues[j].changelog.histories;
+          let sprint;
+          let status = {};
+          let arr;
+          for (let k = histories.length - 1; k >= 0; k--) {
+            for (let m = histories[k].items.length - 1; m >= 0; m--) {
+              let item = histories[k].items[m];
+              if (item.field === 'Sprint') {
+                arr = item.toString.split(',');
+                let nowSprint = arr[arr.length - 1].trim();
+
+                if (!nowSprint) { continue; }
+                if (!sprint) { sprint = nowSprint; continue; }
+                if (nowSprint === sprint) { continue; }
+
+                rData.push({
+                  key: key,
+                  from: sprint + '.' + (status.to || 'To Do'),
+                  to: nowSprint + '.' + (status.to || 'To Do'),
+                  inf: {}
+                });
+
+                sprint = nowSprint;
+              } else if (item.field === 'status') {
+                if (!sprint) { continue; }
+                status = {
+                  from: item.fromString,
+                  to: item.toString
+                }
+
+                rData.push({
+                  key: key,
+                  from: sprint + '.' + status.from,
+                  to: sprint + '.' + status.to,
+                  inf: {}
+                });
+              } else {
+                continue;
+              }
             }
           }
-        ],
+        }
+      }
+
+
+      const _data = {
+        edges: rData,
         frames: [ 
-          { name: 'Sprint 1', desc: 'Lorem ipsum dolor sit amet' },
-          { name: 'Sprint 2', desc: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.' },
-          { name: 'Sprint 3' },
-          { name: 'Sprint 4', desc: 'Lorem ipsum dolor sit amet' }
+          { name: 'WEBX Sprint 1', desc: 'Lorem ipsum dolor sit amet' },
+          { name: 'WEBX Sprint 2', desc: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.' },
+          { name: 'WEBX Sprint 3' },
+          { name: 'WEBX Sprint 4', desc: 'Lorem ipsum dolor sit amet' },
+          { name: 'WEBX Sprint 5', desc: 'Lorem ipsum dolor sit amet' },
+          { name: 'WEBX Sprint 6', desc: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.' },
+          { name: 'WEBX Sprint 7' },
+          { name: 'WEBX Sprint 8', desc: 'Lorem ipsum dolor sit amet' },
+          { name: 'WEBX Sprint 9', desc: 'Lorem ipsum dolor sit amet' },
+          { name: 'WEBX Sprint 10', desc: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.' },
+          { name: 'WEBX Sprint 11' },
+          { name: 'WEBX Sprint 12', desc: 'Lorem ipsum dolor sit amet' },
+          { name: 'WEBX Sprint 13', desc: 'Lorem ipsum dolor sit amet' },
+          { name: 'WEBX Sprint 14', desc: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.' },
         ],
         nodes: [
           { name: 'To Do', config: { color: '#9e9e9e' }},
-          { name: 'In Progress', config: { color: '#3f51b5' }},
+          { name: 'In progress', config: { color: '#3f51b5' }},
           { name: 'In Review', config: { color: '#ffc107' }},
           { name: 'Done', config: { color: '#009688' }}
         ]
@@ -225,7 +177,7 @@
 
       new Arcus()
         .mount('#root', [600, 1200])
-        .data(data)
+        .data(_data)
         .render()
         .contextInf('#con-inf-mount')
         
